# mcp-proxmox

./: .gitignore  .tmp  Makefile  README.md  pyproject.toml  requirements.txt
src/proxmox_mcp/: ai_optimization.py  client.py  cloudinit.py  docker_swarm.py  infrastructure.py  integrations.py  monitoring.py  network.py  rhcos.py  security.py  server.py  storage_advanced.py  utils.py  windows.py
